# python-web-test

./: .gitignore  LICENSE  README.rst  config.json  config.local.env.example  config.prod.env  config.py  project.py  pyproject.toml  pytest.ini  setup.cfg
etc/selenoid/: browsers.json  compose.yaml
run/: clear_reports.sh  print_docker_images_for_selenoid_browsers.sh  pull_docker_images_for_selenoid_browsers.sh  remove_docker_images_for_selenoid_browsers.sh  serve_report.sh  serve_report_in_background.sh  serve_report_stop.sh  start_up_selenoid.sh  start_up_selenoid_with_ui.sh  stop_and_remove_selenoids.sh  stop_selenoid.sh  tests_and_reserve_report.sh  tests_and_reserve_report_in_background.sh  tests_in_firefox_headless.sh  tests_marked_by.sh  tests_marked_by_not_smoke.sh  tests_marked_by_smoke.sh  tests_parallelized_auto.sh  tests_parallelized_in.sh  tests_remote_on.sh
scripts/etc/selenoid/: browsers.json  compose.yaml
selene_pytest_template/: web.py
selene_pytest_template/pages/: duckduckgo.py  ecosia.py  github.py  google.py  searchencrypt.py
tests/: conftest.py  project.py  test_search_engines_should_search.py  test_self.py
web_test/: __init__.py  app.py  web.py
web_test/alternative/: __init__.py
web_test/alternative/settings/: sourced.py
web_test/assist/: __init__.py  project.py
web_test/assist/allure/: __init__.py  aaa.py  gherkin.py
web_test/assist/selene/: __init__.py  report.py
web_test/assist/selenium/: typing.py
web_test/assist/webdriver_manager/: set_up.py  supported.py
web_test/help/: __init__.py  etc.py
web_test/help/allure/: aaa.py  gherkin.py  (+1 more)
web_test/helpers/: etc.py  fp.py
web_test/pages/: duckduckgo.py  ecosia.py  github.py  google.py  pypi.py  python_org.py  searchencrypt.py
web_test/test_markers/: mark.py
(+22 files in other folders)
