[tool.poetry]
name = "web-test"
version = "0.1.0"
description = "python + pytest + selene + allure web tests project template"
authors = ["Iakiv Kramarenko <yashaka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selene = {version = "^2.0.0-alpha.30", allow-prereleases = true}


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-xdist = "^1.31.0"
allure-pytest = "^2.8.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
