[tool.poetry]
name = "web-test"
version = "0.1.0"
description = "python + pytest + selene + allure web tests project template"
authors = ["Iakiv Kramarenko <yashaka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selene = {version = "^2.0.0-beta.2", allow-prereleases = true}
python-dotenv = "^0.15.0"
pydantic = "^1.8.1"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
pytest-rerunfailures = "^10.2"
allure-pytest = "^2.8.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37']
skip-string-normalization = true
